[tool.poetry]
name = "advent-code-2023"
version = "0.1.0"
description = ""
authors = ["David Sanchez Arocha <davidsa@themediapeople.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
